# struct-tool-cli

./: .pre-commit-config.yaml  README.md  go.mod  go.sum  pyproject.toml
src/: components_services.py  gateway_services.py  injection_wire_app.py  structtool
src/cmd/go_cli/: main.go
src/internal/commands/: clients.go  components.go  constants.go  gateways.go  injection_wire_app.go
src/internal/utils/: utils.go
src/internal/utils/logs/: logs.go
src/templates/: provider_components_template.txt
src/templates/clients/: rest_client_interface_template.txt  rest_client_model_template.txt  rest_client_template.txt
src/templates/components/: controller_template.txt  service_template.txt
src/templates/gateways/: gateway_template.txt  get_template.txt  post_template.txt
src/templates/wire/: app_template.txt
src/utils/: logs.py  utils.py
